--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -19,3 +19,9 @@ services:
     app.user_provider:
         class: AppBundle\Security\UserProvider
         arguments: ['@doctrine.orm.entity_manager']
+
+    app.twig_extension:
+        class: AppBundle\Twig\AppExtension
+        public: false
+        tags:
+            - { name: twig.extension }
