--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -34,7 +34,7 @@ security:
                 # The route name the user can go to in order to logout
                 path: security_logout
                 # The name of the route to redirect to after logging out
-                target: security_login_form
+                target: security_login
 
     access_control:
         - { path: ^/admin, roles: ROLE_ADMIN }
