--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -22,6 +22,7 @@ services:
 
     app.twig_extension:
         class: AppBundle\Twig\AppExtension
+        arguments: ['@doctrine.orm.entity_manager']
         public: false
         tags:
             - { name: twig.extension }
