added ranking general & per test & per votes & per activity; show tests in user profile page

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -106,4 +106,8 @@ vote_answer:
   path: /answer/vote
   defaults: { _controller: AppBundle:ChallengeAnswer:vote }
 
+ranking:
+  path: /ranking
+  defaults: { _controller: AppBundle:User:getRanking }
+
 
