added ranking for each test

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -42,6 +42,10 @@ delete_question:
     path: /question/delete/{cid}/{id}
     defaults: { _controller: AppBundle:Question:delete }
 
+test_ranking:
+  path: /test/ranking/{id}
+  defaults: { _controller: AppBundle:Test:getRankingByTest }
+
 all_question_list:
     path: /questions
     defaults: { _controller: AppBundle:Question:listAllQuestions }
